# HPX_sort

./: CMakeLists.txt  Doxyfile  README.html  README.md  code_doxy.html
benchmark/: CMakeLists.txt
benchmark/Linux/: benchmark.cpp  file_generator.cpp  readme.txt
benchmark/Linux/.metadata/.plugins/org.eclipse.cdt.core/: benchmark.1503015740123.pdom  file_generator.1503018253242.pdom  language.settings.xml
benchmark/Linux/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
benchmark/Linux/.metadata/.plugins/org.eclipse.core.resources/.projects/benchmark/: .markers
benchmark/Linux/.metadata/.plugins/org.eclipse.core.resources/.projects/benchmark/.indexes/: history.index  properties.index
benchmark/Linux/.metadata/.plugins/org.eclipse.core.resources/.projects/file_generator/: .markers
benchmark/Linux/.metadata/.plugins/org.eclipse.core.resources/.projects/file_generator/.indexes/: history.index  properties.index
benchmark/Linux/.metadata/.plugins/org.eclipse.core.resources/.root/: 13.tree
benchmark/Linux/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
benchmark/Linux/.metadata/.plugins/org.eclipse.debug.core/.launches/: benchmark Release (1).launch  benchmark Release.launch
benchmark/Linux/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
benchmark/Linux/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
benchmark/Linux/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
benchmark/Linux/benchmark/: .cproject  .project
benchmark/Linux/benchmark/Debug/: benchmark.d  makefile  objects.mk  subdir.mk
benchmark/Linux/benchmark/Release/: benchmark  benchmark.d  objects.mk  results.txt  subdir.mk
benchmark/Linux/file_generator/: .cproject  .project
benchmark/Linux/file_generator/Debug/: file_generator  file_generator.d  makefile  objects.mk  subdir.mk
benchmark/LinuxGCC/bench/: fast_benchmark.cpp  file_generator.cpp
benchmark/include/: file_vector.hpp  int_array.hpp  time_measure.hpp
benchmark/include/tbb43_20150424oss/lib/ia32/gcc4.1/: libtbb.so.2  libtbb_debug.so.2  libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
benchmark/include/tbb43_20150424oss/lib/ia32/gcc4.1/irml/: libirml.so.1  libirml_debug.so.1
benchmark/include/tbb43_20150424oss/lib/ia32/gcc4.4/: libtbb.so.2  libtbb_debug.so.2  libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
benchmark/include/tbb43_20150424oss/lib/ia32/gcc4.4/irml/: libirml.so.1  libirml_debug.so.1
benchmark/include/tbb43_20150424oss/lib/intel64/gcc4.1/: libtbb.so.2  libtbb_debug.so.2  libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
benchmark/include/tbb43_20150424oss/lib/intel64/gcc4.1/irml/: libirml.so.1  libirml_debug.so.1
benchmark/include/tbb43_20150424oss/lib/intel64/gcc4.4/: libtbb_debug.so.2  libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
benchmark/include/tbb43_20150424oss/lib/intel64/gcc4.4/irml/: libirml.so.1  libirml_debug.so.1
benchmark/include/tbb43_20150424oss/lib/mic/: libtbb.so.2  libtbb_debug.so.2  libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
benchmark/include/tbb43_20150424oss/lib/mic/irml/: libirml.so.1  libirml_debug.so.1
doc/: README.html  benchmark.html  index.html
doc/html/: annotated.html  annotated.js  annotated_dup.js  atomic_8hpp.html  atomic_8hpp.js  atomic_8hpp_source.html  backbone_8hpp.html  backbone_8hpp_source.html  blk__ind_8hpp_source.html  block_8hpp.html  block_8hpp.js  block_8hpp_source.html  block__indirect__sort_8hpp.html  block__indirect__sort_8hpp.js  block__indirect__sort_8hpp_source.html  buffer__guard_8hpp.html  buffer__guard_8hpp_source.html  classcomp__unknown.html  classcompare__iter.html  classenable__if__integral.html  classenable__if__not__integral.html  classenable__if__not__string.html  classenable__if__string.html  classes.html  classhpx_1_1parallel_1_1sort_1_1algorithm_1_1less__ptr__no__null-members.html  classhpx_1_1parallel_1_1sort_1_1detail_1_1bis_1_1block__pos.html  classhpx_1_1parallel_1_1sort_1_1detail_1_1less__ptr__no__null-members.html  classhpx_1_1parallel_1_1sort_1_1detail_1_1spin__sort.html  classhpx_1_1parallel_1_1sort_1_1detail_1_1util_1_1spinlock__t-members.html  classhpx_1_1parallel_1_1sort_1_1detail_1_1util_1_1spinlock__t.html  classhpx_1_1parallel_1_1sort_1_1detail_1_1util_1_1stack__cnc-members.html  classhpx_1_1parallel_1_1sort_1_1detail_1_1util_1_1stack__cnc.html  classhpx_1_1parallel_1_1sort_1_1tools_1_1_n_thread-members.html  classhpx_1_1parallel_1_1sort_1_1tools_1_1_n_thread.html  classhpx_1_1parallel_1_1sort_1_1tools_1_1_n_thread.js  classhpx_1_1parallel_1_1sort_1_1tools_1_1buffer__guard-members.html  classhpx_1_1parallel_1_1sort_1_1tools_1_1deque__cnc-members.html  classhpx_1_1parallel_1_1sort_1_1tools_1_1deque__cnc.html  classhpx_1_1parallel_1_1sort_1_1tools_1_1deque__cnc.js  classhpx_1_1parallel_1_1sort_1_1tools_1_1spinlock-members.html  (+280 more)
doc/html_old/: doxygen_sqlite3.db
doc/spreadsheet/: Results_CLANG.txt  Results_GCC.txt  Results_VC++.txt  parallel_numbers.ods  parallel_objects.ods  parallel_strings.ods  single_numbers.ods  single_objects.ods  single_strings.ods
results/: Greina-timing.xlsx  broadwell-1.txt  greina-broadwell-1.xlsx
test/detail/: test_block_indirect_sort.cpp  test_block_indirect_sort_internal.cpp  test_heap_sort.cpp  test_insertion_sort.cpp  test_intro_sort.cpp  test_parallel_sort.cpp  test_parallel_sort_original.cpp  (+3 more)
(+274 files in other folders)
